Add Observers to customer metadata.